--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <link href="/dist/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <h1>Dit is mijn voorpagina!</h1>
